# Renderer

./: CMakeLists.txt  README.md  camera.cpp  camera.h  mainwindow.cpp  mainwindow.h  maths.cpp  maths.h  model.cpp  model.h  phong_shader.cpp  resource.qrc  shader.cpp  shader.h  tgaimage.cpp  tgaimage.h
